RESOLVED FIXED222069
Metal-Angle on IOS fails in ValidateCreatePbufferFromClientBuffer
https://bugs.webkit.org/show_bug.cgi?id=222069
Summary Metal-Angle on IOS fails in ValidateCreatePbufferFromClientBuffer
Dean Jackson
Reported 2021-02-17 14:11:32 PST
ANGLE Metal Backend fails texture target validation on iOS hardware
Attachments
Patch (2.08 KB, patch)
2021-02-17 14:18 PST, Dean Jackson
simon.fraser: review+
Dean Jackson
Comment 1 2021-02-17 14:12:39 PST
Dean Jackson
Comment 2 2021-02-17 14:18:54 PST
EWS Watchlist
Comment 3 2021-02-17 14:19:55 PST
Note that there are important steps to take when updating ANGLE. See https://trac.webkit.org/wiki/UpdatingANGLE
Dean Jackson
Comment 4 2021-02-17 14:42:41 PST
Note You need to log in before you can comment on or make changes to this bug.